Added Codeforces solution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
+    "C_Cpp.errorSquiggles": "enabled",
+    "C_Cpp.intelliSenseEngine": "Default",
+    "C_Cpp.autocomplete": "Default",
     "files.associations": {
-        "ostream": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+        "*.cpp": "cpp",
+        "*.hpp": "cpp",
+        "*.c": "c"
+    }
 }
