Edited the settings.json file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "workbench.colorTheme": "Night Owl Black (No Italics)",
+
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.intelliSenseEngine": "Default",
     "C_Cpp.autocomplete": "Default",
@@ -6,5 +8,16 @@
         "*.cpp": "cpp",
         "*.hpp": "cpp",
         "*.c": "c"
+    },
+
+    "workbench.colorCustomizations": {
+        "tab.activeBorderTop": "#1fb6ff",
+        "tab.activeBorder": "#1fb6ff",
+
+        "titleBar.border": "#1fb6ff",
+        "sideBar.border": "#1fb6ff",
+        "editorGroup.border": "#1fb6ff",
+        "panel.border": "#1fb6ff",
+        "activityBar.border": "#1fb6ff"
     }
 }
