--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Night Owl Black (No Italics)",
+    "workbench.colorTheme": "Night Owl Black",
 
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.intelliSenseEngine": "Default",
