--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,13 +11,67 @@
     },
 
     "workbench.colorCustomizations": {
-        "tab.activeBorderTop": "#1fb6ff",
-        "tab.activeBorder": "#1fb6ff",
 
-        "titleBar.border": "#1fb6ff",
-        "sideBar.border": "#1fb6ff",
-        "editorGroup.border": "#1fb6ff",
-        "panel.border": "#1fb6ff",
-        "activityBar.border": "#1fb6ff"
+        // ---- Tabs & Title Bar Borders ----
+        "tab.activeBorder": "#00FFFF",
+        "tab.activeBorderTop": "#00FFFF",
+        "tab.unfocusedActiveBorder": "#00FFFF",
+        "tab.unfocusedActiveBorderTop": "#00FFFF",
+        "titleBar.border": "#00FFFF",
+        "editorGroupHeader.tabsBorder": "#00FFFF",
+        "editorGroupHeader.border": "#00FFFF",
+
+        // ---- Editor Group Borders ----
+        "editorGroup.border": "#00FFFF",
+        "editorGroup.focusedEmptyBorder": "#00FFFF",
+        "editorGroup.dropBorder": "#00FFFF",
+
+        // ---- Panels & SideBars ----
+        "panel.border": "#00FFFF",
+        "panel.title.activeBorder": "#00FFFF",
+        "panelInput.border": "#00FFFF",
+        "sideBar.border": "#00FFFF",
+        "sideBarSectionHeader.border": "#00FFFF",
+
+
+        // ---- Activity Bar ----
+        "activityBar.border": "#00FFFF",
+
+        // ---- Status Bar ----
+        "statusBar.border": "#00FFFF",
+        "statusBar.noFolderBorder": "#00FFFF",
+        "statusBar.debuggingBorder": "#00FFFF",
+
+        // ---- Editor Borders ----
+        "editor.hoverHighlightBorder": "#00FFFF",
+        "editorSuggestWidget.border": "#00FFFF",
+        "editorWidget.border": "#00FFFF",
+        "editor.findMatchBorder": "#00FFFF",
+        "editor.findMatchHighlightBorder": "#00FFFF",
+        "editor.rangeHighlightBorder": "#00FFFF",
+        "editor.lineHighlightBackground": "#00000000",
+        "editor.lineHighlightBorder": "#C400FF",
+
+        // ---- Menus, Lists, Inputs ----
+        "menu.border": "#00FFFF",
+        "dropdown.border": "#00FFFF",
+        "input.border": "#00FFFF",
+        "peekView.border": "#00FFFF",
+
+        // ---- Notifications, Modals ----
+        "notificationCenter.border": "#00FFFF",
+        "notificationToast.border": "#00FFFF",
+        "notificationCenterHeader.border": "#00FFFF",
+        "notifications.border": "#00FFFF",
+
+        // ---- Debug ----
+        "debugToolBar.border": "#00FFFF",
+        "debugExceptionWidget.border": "#00FFFF",
+
+        // ---- Terminal ----
+        "terminal.border": "#00FFFF",
+
+        // ---- Welcome Page ----
+        "welcomePage.tileBorder": "#00FFFF"
     }
 }
